--- a/qr-code-component-main/styles.css
+++ b/qr-code-component-main/styles.css
@@ -22,50 +22,70 @@ body {
   background: var(--slate-300);
 }
 
+.content {
+  width: 100%;
+  max-width: 1440px;
+  display: flex;
+  justify-content: center;
+  padding: 1.5rem;
+}
+
 .qr-card {
   background: var(--white);
   padding: 1rem;
   border-radius: 1.25rem;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.05);
+  box-shadow: 0 25px 25px rgba(0, 0, 0, 0.0509804);
   max-width: 320px;
+}
+
+.qr-card__image {
+  margin-bottom: 1.5rem;
+}
+
+.qr-card__image img {
+  display: block;
+  width: 100%;
+  border-radius: 0.625rem;
+}
+
+.qr-card__content {
+  padding: 0 1rem;
   text-align: center;
 }
 
-.qr-card img {
-  width: 100%;
-  border-radius: 0.625rem;
-  margin-bottom: 1.25rem;
-}
-
-.qr-card h1 {
+.qr-card__content h1 {
   color: var(--slate-900);
-  font-weight: 700;
   font-size: 1.375rem;
+  font-weight: 700;
   margin-bottom: 1rem;
-  padding: 0 1rem;
+  line-height: 1.275;
 }
 
-.qr-card p {
+.qr-card__content p {
   color: var(--slate-500);
+  font-size: 0.9375rem;
   font-weight: 400;
-  padding: 0 1rem;
+  line-height: 1.25;
   margin-bottom: 1.5rem;
 }
 
 .attribution {
   font-size: 11px;
   text-align: center;
-  margin-top: 2rem;
+  margin-top: 1rem;
 }
 
 .attribution a {
   color: hsl(228, 45%, 44%);
 }
 
-/* Responsive Design */
 @media screen and (max-width: 375px) {
+  .content {
+    padding: 1rem;
+  }
+  
   .qr-card {
-    margin: 1rem;
+    margin: 0;
   }
 }
 
