--- a/qr-code-component-main/styles.css
+++ b/qr-code-component-main/styles.css
@@ -1,8 +1,10 @@
 :root {
-  --white: hsl(0, 0%, 100%);
-  --slate-300: hsl(212, 45%, 89%);
-  --slate-500: hsl(216, 15%, 48%);
-  --slate-900: hsl(218, 44%, 22%);
+  --color-white: #FFF;
+  --spacing-200: 16px;
+  --spacing-300: 24px;
+  --spacing-500: 40px;
+  --color-slate-900: #1F314F;
+  --font-size-text-preset-1: 22px;
 }
 
 * {
@@ -17,62 +19,79 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  background: var(--slate-300);
+  justify-content: center;
+  background: var(--color-slate-300, #D5E1EF);
+  padding: var(--spacing-200) var(--spacing-200) var(--spacing-500) var(--spacing-200);
+  gap: var(--spacing-300);
 }
 
 .content {
-  width: 100%;
-  max-width: 1440px;
   display: flex;
   justify-content: center;
-  padding: 1.5rem;
+  width: 100%;
+  max-width: 1440px;
 }
 
 .qr-card {
-  background: var(--white);
-  padding: 1rem;
-  border-radius: 1.25rem;
-  box-shadow: 0 25px 25px rgba(0, 0, 0, 0.0509804);
+  display: flex;
+  padding: var(--spacing-200, 16px) var(--spacing-200, 16px) var(--spacing-500, 40px) var(--spacing-200, 16px);
+
+  flex-direction: column;
+  align-items: flex-start;
+  gap: var(--spacing-300);
+  border-radius: 20px;
+  background: var(--color-white);
+  box-shadow: 0px 25px 25px 0px rgba(0, 0, 0, 0.05);
   max-width: 320px;
 }
 
-.qr-card__image {
-  margin-bottom: 1.5rem;
-}
+
 
 .qr-card__image img {
   display: block;
-  width: 100%;
-  border-radius: 0.625rem;
+  width: 288px;
+  height: 288px;
+  border-radius: 10px;
+  background: var(--color-blue-600);
 }
 
 .qr-card__content {
-  padding: 0 1rem;
+  padding: 0 16px;
   text-align: center;
 }
 
 .qr-card__content h1 {
-  color: var(--slate-900);
-  font-size: 1.375rem;
+  align-self: stretch;
+  color: var(--color-slate-900);
+  text-align: center;
+  font-feature-settings: 'liga' off, 'clig' off;
+  font-family: Outfit;
+  font-size: var(--font-size-text-preset-1);
+  font-style: normal;
   font-weight: 700;
-  margin-bottom: 1rem;
-  line-height: 1.275;
+  line-height: 120%;
+  margin-bottom: 16px;
 }
 
 .qr-card__content p {
-  color: var(--slate-500);
-  font-size: 0.9375rem;
+  align-self: stretch;
+  color: var(--color-slate-500);
+  text-align: center;
+  font-feature-settings: 'liga' off, 'clig' off;
+  font-family: Outfit;
+  font-size: var(--font-size-text-preset-2);
+  font-style: normal;
   font-weight: 400;
-  line-height: 1.25;
-  margin-bottom: 1.5rem;
+  line-height: 140%;
+  letter-spacing: 0.2px;
+  margin-bottom: 24px;
 }
 
 .attribution {
-  font-size: 11px;
+  font-size: 12px;
   text-align: center;
-  margin-top: 1rem;
+  margin-top: 16px;
 }
 
 .attribution a {
@@ -81,7 +100,7 @@ body {
 
 @media screen and (max-width: 375px) {
   .content {
-    padding: 1rem;
+    padding: 16px;
   }
   
   .qr-card {
