--- a/blog-preview-card-main/styles.css
+++ b/blog-preview-card-main/styles.css
@@ -74,7 +74,9 @@
     display: flex;
     height: 960px;
     justify-content: center;
-    width: 1440px;
+    margin: 0 auto;
+    max-width: 1440px;
+    width: 100%;
   }
   
   .card {
@@ -86,24 +88,26 @@
     display: flex;
     flex-direction: column;
     gap: var(--spacing-200, 24px);
+    margin: 0 auto;
     max-width: 384px;
     padding: var(--spacing-200, 24px);
     width: 100%;
   } 
     
   /* Mobile styles */
-  @media screen and (max-width: 375px) {
+  @media screen and (max-width: 376px) {
     main {
       align-items: center;
       flex-direction: column;
       height: auto;
       justify-content: center;
       padding: 156px 24px 155px;
-      width: 375px;
+      width: 100%;
     }
   
     .card {
-      max-width: 375px;
+      max-width: 327px;
+      width: 100%;
     }
   }
   
